[package]
name = "bevy_octopus"
version = "0.1.0"
authors = [
    "ZoOL <zhooul@gmail.com>"
]
edition = "2021"
description = "ECS based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_octopus"
license = "MIT OR Apache-2.0"
categories = ["game-development", "network-programming"]
keywords = ["bevy", "networking", "ecs"]
homepage = "https://github.com/foxzool/bevy_octopus"
documentation = "https://docs.rs/bevy_octopus"

[features]
default = ["udp", "tcp"]
udp = []
tcp = []
websocket = ["ws_stream_tungstenite", "async-tungstenite"]
inspect = ["bevy-inspector-egui"]



[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [] }
bytes = "1.6.0"
kanal = "0.1.0-pre8"
futures = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = { version = "1.0.59" }
tokio = { version = "1.36.0", features = ["net", "io-util", "rt-multi-thread", "macros"] }


bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.68", optional = true }
bevy-inspector-egui = { version = "0.24.0", optional = true }
ws_stream_tungstenite = { version = "0.13", features = ["tokio_io"], optional = true }
async-tungstenite = { version = "^0.25", features = ["tokio-runtime"], optional = true }



[dev-dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "vorbis",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_core_pipeline",
    "x11"
] }


[[example]]
name = "udp_server"
path = "examples/udp/server.rs"
required-features = ["udp", "serde_json", "bincode"]

[[example]]
name = "udp_client"
path = "examples/udp/client.rs"
required-features = ["udp", "serde_json", "bincode"]

[[example]]
name = "udp_client_raw"
path = "examples/udp/client_raw.rs"
required-features = ["udp"]

[[example]]
name = "udp-complex"
path = "examples/udp/udp_complex.rs"
required-features = ["udp", "serde_json", "bincode"]

[[example]]
name = "tcp_client"
path = "examples/tcp/client.rs"
required-features = ["tcp", "serde_json", "bincode"]

[[example]]
name = "tcp_server"
path = "examples/tcp/server.rs"
required-features = ["tcp", "serde_json", "bincode"]


[[example]]
name = "ws_server"
path = "examples/ws/server.rs"
required-features = ["websocket", "serde_json", "bincode"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
