[package]
name = "bevy_octopus"
version = "0.1.0"
authors = ["ZoOL <zhooul@gmail.com>"]
edition = "2021"
description = "ECS based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_octopus"
license = "MIT OR Apache-2.0"
categories = ["game-development", "network-programming"]
keywords = ["bevy", "networking", "ecs"]
homepage = "https://github.com/foxzool/bevy_octopus"
documentation = "https://docs.rs/bevy_octopus"

[features]
default = ["udp", "tcp"]
udp = []
tcp = []
websocket = ["async-tungstenite"]
inspect = ["bevy-inspector-egui"]
async-tls = ["async-tungstenite/async-tls"]



[dependencies]
anyhow = { version = "1.0.42" }
async-std = { version = "1.10.0" }
bevy = { version = "0.14.0", default-features = false, features = [] }
bytes = "1.6.0"
kanal = "0.1.0-pre8"
futures = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = { version = "1.0.59" }
url = "2.5.1"

bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.68", optional = true }
bevy-inspector-egui = { version = "0.24.0", optional = true }
async-tungstenite = { version = "^0.25", features = ["async-std-runtime"], optional = true }



[dev-dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "vorbis",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_core_pipeline",
    "x11"
] }


[[example]]
name = "udp_server"
path = "examples/udp/server.rs"
required-features = ["udp", "serde_json", "bincode"]

[[example]]
name = "udp_client"
path = "examples/udp/client.rs"
required-features = ["udp", "serde_json", "bincode"]

[[example]]
name = "udp_client_raw"
path = "examples/udp/client_raw.rs"
required-features = ["udp"]

[[example]]
name = "udp-complex"
path = "examples/udp/udp_complex.rs"
required-features = ["udp", "serde_json", "bincode"]

[[example]]
name = "tcp_client"
path = "examples/tcp/client.rs"
required-features = ["tcp", "serde_json", "bincode"]

[[example]]
name = "tcp_server"
path = "examples/tcp/server.rs"
required-features = ["tcp", "serde_json", "bincode"]


[[example]]
name = "ws_server"
path = "examples/ws/server.rs"
required-features = ["websocket", "serde_json", "bincode"]

[[example]]
name = "ws_client"
path = "examples/ws/client.rs"
required-features = ["websocket", "async-tls", "serde_json", "bincode"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
