[package]
name = "bevy_octopus"
version = "0.6.0"
authors = ["ZoOL <zhooul@gmail.com>"]
edition = "2024"
description = "ECS based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_octopus"
license = "MIT OR Apache-2.0"
categories = ["game-development", "network-programming"]
keywords = ["bevy", "networking", "ecs"]
homepage = "https://github.com/foxzool/bevy_octopus"
documentation = "https://docs.rs/bevy_octopus"

[workspace]
members = ["bevy_octopus_websocket"]

[features]
default = []
inspect = ["bevy-inspector-egui"]



[dependencies]
async-std = { version = "1.13.2" }
bevy = { version = "0.17.1", default-features = false, features = ["bevy_log"] }
bytes = "1.10.1"
kanal = "0.1.1"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { version = "1.0.69" }

bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.145", optional = true }
bevy-inspector-egui = { version = "0.34.0", optional = true }



[dev-dependencies]
bevy = { version = "0.17.1", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "vorbis",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_core_pipeline",
    "multi_threaded",
    "x11"
] }


[[example]]
name = "udp_server"
path = "examples/udp/server.rs"
required-features = ["serde_json", "bincode"]

[[example]]
name = "udp_client"
path = "examples/udp/client.rs"
required-features = ["serde_json", "bincode"]

[[example]]
name = "udp_client_raw"
path = "examples/udp/client_raw.rs"

[[example]]
name = "udp-complex"
path = "examples/udp/udp_complex.rs"
required-features = ["serde_json", "bincode"]

[[example]]
name = "tcp_client"
path = "examples/tcp/client.rs"
required-features = ["serde_json", "bincode"]

[[example]]
name = "tcp_server"
path = "examples/tcp/server.rs"
required-features = ["serde_json", "bincode"]


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
