[package]
name = "bevy_octopus_websocket"
version = "0.1.0"
edition = "2021"
authors = ["ZoOL <zhooul@gmail.com>"]
description = "ECS based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_octopus"
license = "MIT OR Apache-2.0"
categories = ["game-development", "network-programming"]
keywords = ["bevy", "networking", "ecs"]
homepage = "https://github.com/foxzool/bevy_octopus"
documentation = "https://docs.rs/bevy_octopus_websocket"

[features]



[dependencies]
bevy_octopus = { version = "0.3.0", path = ".." }
bevy = { version = "0.14.0", default-features = false, features = [] }
async-std = "1.12.0"
async-tungstenite = { version = "0.27.0", features = ["async-std-runtime", "async-tls"] }
tungstenite = "0.23.0"
bytes = "1.6.0"
futures = "0.3.30"
kanal = "0.1.0-pre8"




[dev-dependencies]
serde = { version = "1.0.130", features = ["serde_derive"] }
bincode = { version = "1.3.3" }
serde_json = { version = "1.0.68" }

[[example]]
name = "ws_server"
path = "examples/server.rs"
required-features = ["bevy_octopus/serde_json", "bevy_octopus/bincode"]

[[example]]
name = "ws_client"
path = "examples/client.rs"
required-features = ["bevy_octopus/serde_json", "bevy_octopus/bincode"]
