[package]
name = "bevy_octopus_websocket"
version = "0.1.0"
edition = "2024"
authors = ["ZoOL <zhooul@gmail.com>"]
description = "ECS based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_octopus"
license = "MIT OR Apache-2.0"
categories = ["game-development", "network-programming"]
keywords = ["bevy", "networking", "ecs"]
homepage = "https://github.com/foxzool/bevy_octopus"
documentation = "https://docs.rs/bevy_octopus_websocket"

[features]



[dependencies]
bevy_octopus = { version = "*", path = ".." }
bevy = { version = "0.17.1", default-features = false, features = [] }
async-std = "1.13.2"
async-tungstenite = { version = "0.27.0", features = ["async-std-runtime", "async-tls"] }
tungstenite = "0.23.0"
bytes = "1.10.1"
futures = "0.3.31"
kanal = "0.1.1"




[dev-dependencies]
serde = { version = "1.0.228", features = ["serde_derive"] }
bevy_octopus = { version = "*", path = "..", features = ["serde_json", "bincode"] }

[[example]]
name = "ws_server"
path = "examples/server.rs"
required-features = ["bevy_octopus/serde_json", "bevy_octopus/bincode"]

[[example]]
name = "ws_client"
path = "examples/client.rs"
required-features = ["bevy_octopus/serde_json", "bevy_octopus/bincode"]
